# follow-the-money

./: .env.example  .gitignore  AGENT_OS_HOWTO.md  Makefile  README.md  pyproject.toml
agent-os/: config.yml
agent-os/product/: mission.md  roadmap.md  tech-stack.md
agent-os/specs/2025-11-18-data-ingestion-normalization/: spec.md  tasks.md
agent-os/specs/2025-11-18-data-ingestion-normalization/planning/: initialization.md  requirements.md
agent-os/specs/2025-11-18-data-ingestion-normalization/verifications/: final-verification.html
alembic/: env.py  script.py.mako
alembic/versions/: 20251118_01_initial_schema.py
docs/: AGENT_OS_HOWTO.md  agentos-usage.md
docs/data/: ingestion.md  leaning-score.md  schema-plan.md
docs/runbooks/: ingest.md
src/follow_the_money/: __init__.py  cli.py
src/follow_the_money/db/: schema.py
src/follow_the_money/ingest/: __init__.py  parser.py  staging_loader.py
src/follow_the_money/metrics/: __init__.py  leaning.py
src/follow_the_money/normalize/: __init__.py  mappers.py  pipeline.py
src/follow_the_money/sources/: __init__.py  fec_bulk.py  http.py  openfec.py  types.py
src/follow_the_money/validation/: __init__.py  runner.py
tests/: __init__.py  test_schema.py
tests/ingest/: test_parser.py  test_staging_loader.py
tests/metrics/: test_leaning.py
tests/normalize/: test_pipeline.py
tests/sources/: __init__.py  test_fec_bulk.py  test_http.py  test_openfec.py
tests/validation/: test_row_counts.py  test_runner.py
