[project]
name = "follow-the-money"
version = "0.1.0"
description = "Data ingestion and normalization pipelines for Follow the Money."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "SQLAlchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "pydantic>=2.8",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-dotenv>=0.5",
    "ruff>=0.5",
    "black>=24.4",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]
